fix(glue): Address review comments
Extract rejectIfView() so the three table entry points share one condition
and message. Use Map.of instead of Guava ImmutableMap in the view fixture.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>